# calendar-levo-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
app/: config.py  database.py  dependencies.py  mail.py  main.py  router.py  tasks.py
app/events/: crud.py  models.py  router.py  schemas.py
app/users/: crud.py  models.py  router.py  schemas.py
