[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Sagar Aryal <sagaryal3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
celery = "^5.4.0"
redis = "^5.0.7"
fastapi-mail = "^1.4.1"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "app.main:start"
